--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">MyMovies</string>
     <string name="order_popular">Order by popularity</string>
     <string name="order_rating">Order by highest rated</string>
+    <string name="order_favourite">Favorite movies</string>
+
     <string name="title_activity_details">DetailsActivity</string>
     <string name="no_internet_connection">You are not connected to the internet.</string>
 </resources>
