--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
 
     <string name="title_activity_details">DetailsActivity</string>
     <string name="no_internet_connection">You are not connected to the internet.</string>
+    <string name="rating">Rating:</string>
+    <string name="release_date">Release date:</string>
+    <string name="videos">Videos:</string>
+    <string name="reviews">Reviews:</string>
+    <string name="thumbnail_image">Thumbnail image</string>
+    <string name="movie_poster">Movie poster</string>
 </resources>
